# lexical

./: .gitignore  CMakeLists.txt  README.md
cmake/: lexical-config.cmake.in  lexical.cmake
conan/: conanfile.py
conan/test_package/: conanfile.py  main.cc  scanner.re
demo/: CMakeLists.txt  scanner.def.h  scanner.h
lemon/: CMakeLists.txt  lemon.c
re2c/: CMakeLists.txt  basics.h  code.h  config.h  config_w32.h  mbo_getopt.cc  parser.cc  parser.h  stream_lc.h  substr.cc  substr.h
